switch to margin right to avoid weird nav on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -28,8 +28,8 @@ body {
 	font-weight: normal;
 }
 
-.nav-items a:not(:first-child) {
-	margin-left: 15px;
+.nav-items a:not(:last-child) {
+	margin-right: 15px;
 }
 
 h1, h2, h3, h5 {
